fixed spacing of text and put initiative in the right order

--- a/src/components/LiveView.css
+++ b/src/components/LiveView.css
@@ -60,7 +60,7 @@
   font-size: 1rem;
   color: rgba(255, 255, 255, 0.6);
   text-transform: uppercase;
-  width: 75%;
+  width: 60%;
 }
 
 @media screen and (min-width: 900px) {
